name: zifter
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Zifter
        Zifter.Hindent
        Zifter.OptParse
        Zifter.OptParse.Types
        Zifter.Script
        Zifter.Script.Types
        Zifter.Setup
        Zifter.Setup.Types
        Zifter.Stack
        Zifter.Types
        Zifter.Zift
        Zifter.Zift.Types
    build-depends:
        base >=4.9 && <=5,
        introduction,
        process >= 1.4 && < 1.5,
        filepath >= 1.4 && < 1.5,
        directory >= 1.2 && < 1.3,
        optparse-applicative >= 0.12 && < 0.13
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite zifter-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Zifter.ZiftSpec
        Zifter.Zift.Gen
    build-depends:
        base >=4.9 && <=5,
        zifter -any,
        hspec -any,
        introduction-test
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
