name: zifter-google-java-format
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Zift
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Zifter.GoogleJavaFormat
    build-depends:
        base >=4.9 && <=5,
        zifter >=0.0 && <0.1
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

