name: zifter-stack
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Zift
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Zifter.Stack
    build-depends:
        base >=4.9 && <=5,
        process >=1.4 && <1.5,
        filepath >=1.4 && <1.5,
        directory >=1.2 && <1.3,
        zifter >=0.0 && <0.1,
        path >=0.5 && <0.6
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

