name: zifter
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Zift
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Zifter
        Zifter.OptParse
        Zifter.OptParse.Types
        Zifter.Script
        Zifter.Script.Types
        Zifter.Setup
        Zifter.Setup.Types
        Zifter.Types
        Zifter.Zift
        Zifter.Zift.Types
    build-depends:
        base >=4.9 && <=5,
        async >=2.1 && <2.2,
        directory >=1.2 && <1.3,
        filepath >=1.4 && <1.5,
        optparse-applicative >=0.12 && <0.13,
        path >=0.5 && <0.6,
        path-io >1.2 && <1.3,
        process >=1.4 && <1.5,
        safe >=0.3 && <0.4,
        validity >=0.3 && <0.4
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite zifter-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        zifter -any,
        hspec -any,
        introduction-test -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        Zifter.ZiftSpec
        Zifter.Zift.Gen
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
